--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     implementation kotlinStdlib
     implementation androidXAppCompat
     implementation gson
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
