--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,8 +20,10 @@ ext {
     kotlinStdlib                = "org.jetbrains.kotlin:kotlin-stdlib:${ext.kotlin_version}"
 
     // ANDROID LIB
-    androidAppCompatXVersion    = '1.0.2'
+    androidAppCompatXVersion    = '1.1.0'
+    materialVersion             = '1.0.0'
     androidXAppCompat           = "androidx.appcompat:appcompat:$androidAppCompatXVersion"
+    materialDesign              = "com.google.android.material:material:$materialVersion"
 
     // GSON
     gsonVersion                 = '2.8.6'
