--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,9 +12,9 @@ ext {
     androidVersionName          = '1.0.0'
 
     // ANDROID VERSION
-    androidCompileSdkVersion    = 28
+    androidCompileSdkVersion    = 29
     androidMinSdkVersion        = 21
-    androidTargetSdkVersion     = 28
+    androidTargetSdkVersion     = androidCompileSdkVersion
 
     // KOTLIN
     kotlinStdlib                = "org.jetbrains.kotlin:kotlin-stdlib:${ext.kotlin_version}"
