--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,11 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# When set to true, this flag indicates that you want to start using AndroidX from now on.
+# If the flag is absent, Android Studio behaves as if the flag were set to false.
+android.useAndroidX=true
+# When set to true, this flag indicates that you want to have tool support (from the Android Gradle
+# plugin) to automatically convert existing third-party libraries as if they were written for
+# AndroidX. If the flag is absent, Android Studio behaves as if the flag were set to false.
+android.enableJetifier=true
+
